force-app/main/default/objects/Loss_Analysis__c/Loss_Analysis__c.object-meta.xml
<CustomObject>
    <description>One per lost intake. AI-classified reason a case didn&apos;t sign, with fault category, evidence quote, and confidence. Source/Incident Type/Specialist are snapshotted on so aggregation is a single-object GROUP BY.</description>
    <label>Loss Analysis</label>
    <nameField>
        <displayFormat>LOSS-{0000}</displayFormat>
        <label>Loss Analysis Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loss Analyses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>