force-app/main/default/objects/Loss_Analysis__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <description>Model confidence (0.00-1.00). Below the configured threshold flags the record Needs Review.</description>
    <label>Confidence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>