force-app/main/default/objects/Loss_Analysis__c/fields/Evidence_Quote__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Quote__c</fullName>
    <description>Verbatim quote from the transcript supporting the reason. Must be a real substring or the record is flagged Needs Review.</description>
    <label>Evidence Quote</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>