force-app/main/default/objects/Loss_Analysis__c/fields/Fault_Category__c.field-meta.xml
<CustomField>
    <fullName>Fault_Category__c</fullName>
    <description>Derived deterministically from Primary Reason. Process = fixable (our fault), Case_Merits = unavoidable, Client_Choice = client decision.</description>
    <label>Fault Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process</fullName>
                <label>Process (fixable)</label>
            </value>
            <value>
                <fullName>Case_Merits</fullName>
                <label>Case Merits</label>
            </value>
            <value>
                <fullName>Client_Choice</fullName>
                <label>Client Choice</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>