force-app/main/default/objects/Loss_Analysis__c/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <description>Snapshot of the intake&apos;s incident type at time of loss.</description>
    <label>Incident Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>