force-app/main/default/objects/Loss_Analysis__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lost intake this analysis explains.</description>
    <label>Intake</label>
    <referenceTo>Intake__c</referenceTo>
    <relationshipLabel>Loss Analyses</relationshipLabel>
    <relationshipName>Loss_Analyses</relationshipName>
    <type>Lookup</type>
</CustomField>