force-app/main/default/objects/Loss_Analysis__c/fields/Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the evidence quote couldn&apos;t be verified in the transcript or confidence was below threshold. A human should confirm.</description>
    <label>Needs Review</label>
    <type>Checkbox</type>
</CustomField>