force-app/main/default/objects/Loss_Analysis__c/fields/Primary_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reason__c</fullName>
    <description>Closed-taxonomy reason the case did not sign. Off-taxonomy AI answers snap to Unclassified.</description>
    <label>Primary Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fee_Or_Cost_Concern</fullName>
                <label>Fee or Cost Concern</label>
            </value>
            <value>
                <fullName>Chose_Another_Firm</fullName>
                <label>Chose Another Firm</label>
            </value>
            <value>
                <fullName>Case_Declined_Merits</fullName>
                <label>Case Declined - Merits</label>
            </value>
            <value>
                <fullName>Statute_Expired</fullName>
                <label>Statute Expired</label>
            </value>
            <value>
                <fullName>Insufficient_Injury_Or_Damages</fullName>
                <label>Insufficient Injury or Damages</label>
            </value>
            <value>
                <fullName>No_Clear_Liability</fullName>
                <label>No Clear Liability</label>
            </value>
            <value>
                <fullName>Already_Represented</fullName>
                <label>Already Represented</label>
            </value>
            <value>
                <fullName>Wanted_Self_Handle</fullName>
                <label>Wanted to Self-Handle</label>
            </value>
            <value>
                <fullName>Slow_Response_Or_Experience</fullName>
                <label>Slow Response or Experience</label>
            </value>
            <value>
                <fullName>Lost_Contact_Ghosted</fullName>
                <label>Lost Contact / Ghosted</label>
            </value>
            <value>
                <fullName>Trust_Or_Comfort</fullName>
                <label>Trust or Comfort</label>
            </value>
            <value>
                <fullName>Conflict_Of_Interest</fullName>
                <label>Conflict of Interest</label>
            </value>
            <value>
                <fullName>Referred_Out_Intentional</fullName>
                <label>Referred Out (Intentional)</label>
            </value>
            <value>
                <fullName>Unclassified</fullName>
                <default>true</default>
                <label>Unclassified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>