force-app/main/default/objects/Loss_Analysis__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Snapshot of the intake&apos;s lead source at time of loss, so aggregation is a single-object query.</description>
    <label>Source</label>
    <length>120</length>
    <type>Text</type>
</CustomField>