force-app/main/default/objects/Loss_Analysis__c/fields/Specialist__c.field-meta.xml
<CustomField>
    <fullName>Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Snapshot of the intake owner (specialist) at time of loss, for by-specialist aggregation.</description>
    <label>Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Loss Analyses</relationshipLabel>
    <relationshipName>Loss_Analyses</relationshipName>
    <type>Lookup</type>
</CustomField>