force-app/main/default/objects/Loss_Analysis__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>One-line plain-language summary of why this case was lost.</description>
    <label>Summary</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>